# MyHumanoid

./: .clang-format  .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  ProjectVersion.cmake  TODO  readme.md  serve.py  web-build.sh
animorph/: CMakeLists.txt  TODO  config.h.in
animorph-0.3/: AUTHORS  CMakeLists.txt  COPYING  Makefile.am  Makefile.in  aclocal.m4  animorph-uninstalled.pc.in  animorph.DevPackage.in  animorph.pc.in  configure  configure.ac  libanimorph.cbp  libanimorph.dev
animorph-0.3/include/: Makefile.am  Makefile.in
animorph-0.3/include/animorph/: BodySettings.h  ColladaExporter.h  Color.h  DirectoryList.h  EdgeStrip.h  Euler.h  Face.h  FaceGroup.h  FaceVector.h  FileReader.h  FileWriter.h  Hotspot.h  Makefile.am  Makefile.in  Material.h  MathUtil.h  Matrix.h  Mesh.h  ObjExporter.h  OgreXMLExporter.h  PoseRotation.h  PoseSemiTarget.h  PoseTarget.h  PoseTranslation.h  Quaternion.h  RIBExporter.h  RawMesh.h  Skin.h  SkinVertex.h  SmoothVertex.h  Target.h  TextureVector.h  Vector2.h  Vector3.h  Vertex.h  VertexGroup.h  VertexVector.h  util.h  xmlParser.h
animorph-0.3/os-x/animorph_framework.xcodeproj/: project.pbxproj
animorph-0.3/os-x/resources/: Info.plist
animorph-0.3/os-x/src/: animorph_Prefix.pch
animorph-0.3/src/: BodySettings.cpp  ColladaExporter.cpp  Euler.cpp  FaceGroup.cpp  Hotspot.cpp  Makefile.am  Makefile.in  Material.cpp  ObjExporter.cpp  Quaternion.cpp  RIBExporter.cpp  RawMesh.cpp  Skin.cpp  SkinVertex.cpp  TextureVector.cpp  VertexGroup.cpp  VertexVector.cpp  util.cpp  xmlParser.cpp
animorph/include/animorph/: BodySettings.h  ColladaExporter.h  Color.h  DirectoryList.h  EdgeStrip.h  Euler.h  Face.h  FaceGroup.h  FaceVector.h  FileReader.h  Hotspot.h  MathUtil.h  Matrix.h  Mesh.h  ObjExporter.h  OgreXMLExporter.h  PoseSemiTarget.h  PoseTarget.h  PoseTranslation.h  Quaternion.h  RIBExporter.h  RawMesh.h  SkinVertex.h  Target.h  TextureVector.h  Vector2.h  Vector3.h  Vertex.h  VertexGroup.h  VertexVector.h  util.h
animorph/src/: BodySettings.cpp  ColladaExporter.cpp  Color.cpp  DirectoryList.cpp  EdgeStrip.cpp  Face.cpp  FaceGroup.cpp  FaceVector.cpp  FileReader.cpp  FileWriter.cpp  Hotspot.cpp  Material.cpp  MathUtil.cpp  Matrix.cpp  Mesh.cpp  ObjExporter.cpp  OgreXMLExporter.cpp  PoseRotation.cpp  PoseSemiTarget.cpp  PoseTarget.cpp  PoseTranslation.cpp  Quaternion.cpp  RIBExporter.cpp  RawMesh.cpp  Skin.cpp  SkinVertex.cpp  SmoothVertex.cpp  Target.cpp  TextureVector.cpp  Vertex.cpp  VertexGroup.cpp  VertexVector.cpp  util.cpp  xmlParser.cpp
makehuman/: CMakeLists.txt
makehuman-0.9.1-rc1a/: AUTHORS  CMakeLists.txt  COPYING.MIT  Makefile.am  Makefile.in  README.txt  TODO  aclocal.m4  config.h.in  configure  configure.ac  makehuman.cbp  makehuman.dev
makehuman-0.9.1-rc1a/config/: compiler_ms.m4  glu.m4  pthread.m4
makehuman-0.9.1-rc1a/os-x/MakeHuman.xcodeproj/: project.pbxproj
makehuman-0.9.1-rc1a/os-x/resources/: AppIcon.icns  Credits.html  Info_10.3.9.plist
makehuman-0.9.1-rc1a/os-x/src/: MACFileUtils.cpp  MACFileUtils.h  MainController.h  MainController.mm  main.mm  makehuman_Prefix.pch
makehuman-0.9.1-rc1a/src/: Animation.cpp  Animation.h  BodyPanel.cpp  BodyPanel.h  BottomPanel.cpp  BottomPanel.h  BsCategoryPanel.cpp  BsCategoryPanel.h  BsPanel.cpp  BsPanel.h  BsPanelSelectionListener.cpp  BsPanelSelectionListener.h  BsSelectionListener.cpp  BsSelectionListener.h  CharacterSettingPanel.cpp  CharacterSettingPanel.h  ClothesPanel.cpp  ClothesPanel.h  ComponentID.h  ConsoleCommands.h  ConsoleListener.cpp  ConsoleListener.h  FacePanel.cpp  FacePanel.h  FileTools.cpp  FileTools.h  FooterPanel.cpp  FooterPanel.h  Global.cpp  Global.h  HandsPanel.cpp  HandsPanel.h  ImageButton.h  ImageListener.cpp  ImageListener.h  Makefile.am  Makefile.in  PageBsPanel.cpp  PageBsPanel.h  PagePosesBsPanel.cpp  (+48 more)
makehuman-0.9.1-rc1a/src/gui/: Camera.cpp  Component.cpp  ImageSlider.cpp  ImageSliderSysListener.h  Label.cpp  Selector.cpp  Texture.cpp  Widget.cpp
makehuman/shader/: background.frag  background.vert  body.frag  body.vert  body_2.frag  body_2.vert
makehuman/src/: Animation.cpp  Animation.h  BodyPanel.cpp  BodyPanel.h  BottomPanel.cpp  BottomPanel.h  BsCategoryPanel.cpp  BsCategoryPanel.h  BsPanel.cpp  BsPanel.h  BsPanelSelectionListener.cpp  BsPanelSelectionListener.h  BsSelectionListener.cpp  BsSelectionListener.h  CharacterSettingPanel.cpp  CharacterSettingPanel.h  ClothesPanel.cpp  ClothesPanel.h  ComponentID.h  ConsoleCommands.h  ConsoleListener.cpp  ConsoleListener.h  FacePanel.cpp  FacePanel.h  FileTools.cpp  FileTools.h  FooterPanel.cpp  FooterPanel.h  GlInclude.h  Global.cpp  Global.h  HandsPanel.cpp  HandsPanel.h  ImageButton.h  ImageListener.cpp  ImageListener.h  MhConfig.cpp  MhConfig.h  MhGui.h  MhGuiData.cpp  (+62 more)
makehuman/src/animorph/: BodySettings.cpp  BodySettings.h  ColladaExporter.cpp  ColladaExporter.h  Color.cpp  Color.h  DirectoryList.cpp  DirectoryList.h  EdgeStrip.cpp  Euler.h  Face.cpp  Face.h  FaceGroup.cpp  FaceGroup.h  FaceVector.cpp  FaceVector.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  Hotspot.cpp  Hotspot.h  Material.cpp  Material.h  MathUtil.cpp  MathUtil.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  ObjExporter.cpp  ObjExporter.h  PoseRotation.cpp  PoseRotation.h  PoseSemiTarget.cpp  PoseSemiTarget.h  PoseTarget.cpp  PoseTarget.h  PoseTranslation.cpp  PoseTranslation.h  (+26 more)
makehuman/src/gui/: AbstractListener.h  (+47 more)
mhgui-0.2/: CMakeLists.txt  COPYING  Makefile.am  Makefile.in  TODO  aclocal.m4  configure  configure.ac  mhgui-env.sh.in  mhgui-uninstalled.pc.in  mhgui.DevPackage.in  mhgui.pc.in
mhgui-0.2/config/: freeglut.m4  gl.m4  glut.m4  libpng.m4
mhgui-0.2/include/: Makefile.am  Makefile.in
mhgui-0.2/src/: CGUtilities.cpp  Camera.cpp  Component.cpp  Console.cpp  Image.cpp  ImageData.cpp  ImageSlider.cpp  ImageSliderSysListener.cpp  ImageSysListener.cpp  Label.cpp  Makefile.am  Makefile.in  MultiPanel.cpp  Panel.cpp  Point.cpp  Rect.cpp  Selector.cpp  SelectorSysListener.cpp  Size.cpp  TextEntry.cpp  TextEntrySysListener.cpp  Texture.cpp  Tooltip.cpp  Widget.cpp  Window.cpp
(+211 files in other folders)
